--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,11 +36,11 @@ const t = useTranslations(lang);
 
 const logos = [
   { name: 'Vite', src: 'https://vitejs.dev/logo.svg', description: t['logo.vite.desc'] },
-  { name: 'Cloudflare', src: 'https://upload.wikimedia.org/wikipedia/commons/4/4b/Cloudflare_Logo.svg', description: t['logo.cloudflare.desc'] },
+  { name: 'Cloudflare', src: '/cloudflare-logo.svg', description: t['logo.cloudflare.desc'] },
   { name: 'Astro', src: 'https://astro.build/assets/press/astro-logo-dark.svg', description: t['logo.astro.desc'] },
-  { name: 'React', src: 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1200px-React-icon.svg.png', description: t['logo.react.desc'] },
-  { name: 'Tailwind CSS', src: 'https://upload.wikimedia.org/wikipedia/commons/d/d5/Tailwind_CSS_Logo.svg', description: t['logo.tailwind.desc'] },
-  { name: 'Framer Motion', src: 'https://pagepro.co/blog/wp-content/uploads/2020/03/framer-motion.png', description: t['logo.framer.desc'] },
+  { name: 'React', src: '/react-logo.svg', description: t['logo.react.desc'] },
+  { name: 'Tailwind CSS', src: '/tailwind-logo.svg', description: t['logo.tailwind.desc'] },
+  { name: 'Framer Motion', src: '/framer-motion.png', description: t['logo.framer.desc'] },
 ];
 
 ---
