--- a/src/components/layout/SEO.astro
+++ b/src/components/layout/SEO.astro
@@ -70,17 +70,16 @@ const robots = [
 {keywords && <meta name="keywords" content={keywords} />}
 
 <!-- Open Graph / Facebook -->
-<meta property="og:type" content={article ? 'article' : type} />
+<meta property="og:type" content={article ? 'article' : 'website'} />
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(ogImageUrl, Astro.site).toString()} />
+<meta property="og:image:secure_url" content={new URL(ogImageUrl, Astro.site).toString()} />
+<meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="1280" />
 <meta property="og:image:height" content="720" />
 <meta property="og:image:alt" content={title} />
-<meta property="og:image:type" content="image/jpeg" />
-<meta property="og:image:secure_url" content={new URL(ogImageUrl, Astro.site).toString()} />
-<meta property="og:logo" content={new URL(siteConfig.logo.src, Astro.site).toString()} />
 <meta property="og:site_name" content={siteName} />
 <meta property="og:locale" content={locale} />
 {article && publishedTime && <meta property="article:published_time" content={publishedTime} />}
